# tls-client-rs

./: .gitignore  Cargo.toml  PARITY_TODO.md  README.md
.cargo/: config.toml
crates/h3-helper/: Cargo.toml
crates/h3-helper/src/: main.rs
examples/: main.rs
src/: bandwidth.rs  client.rs  cookie_jar.rs  ffi.rs  http2.rs  http3.rs  http3_client.rs  ja3.rs  lib.rs  profile.rs  request.rs  websocket.rs
tests/: bandwidth.rs  compression.rs  config_validation.rs  cookie_jar.rs  dialer.rs  firefox_unsupported_group_live.rs  header_order.rs  hooks.rs  http3_live.rs  ja3.rs  keep_alive.rs  profile_fingerprints_live.rs  profile_parity_live.rs  profile_psk_parity_live.rs  profile_registry.rs  proxy.rs  random_extension_order_live.rs  redirect_timeout.rs  websocket.rs
