[package]
name = "tls-rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
base64 = "0.22"
bytes = "1"
boring2 = { version = "4", features = ["cert-compression"] }
cookie = "0.18"
futures-util = "0.3"
http = "1"
hpack = "0.3"
httparse = "1"
libc = "0.2"
openssl-probe = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-util", "process"] }
tokio-boring2 = "4"
tokio-tungstenite = "0.28"
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
axum = { version = "0.8", features = ["http1", "tokio"] }
flate2 = "1"
