[package]
name = "tls-rust-h3-helper"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
boring = "4.3"
http = "1"
octets = "0.3"
openssl-probe = "0.2"
quiche = { version = "0.28", default-features = false, features = ["boringssl-boring-crate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
url = "2"
